메일 비밀번호 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.devtools.livereload.enabled=true
 # ?? ?? ??
 spring.mail.host=smtp.gmail.com
 spring.mail.username=ksjj1402@gmail.com
-spring.mail.password=dkfzkxmfkwm14A%
+spring.mail.password=kijdhvxvluowdhhj
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
