--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ logging.level.org.hibernate=info
 # 무단 배포 및 악용금지
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.username=RiGun
+spring.datasource.password=1318
 
 # update 또는 create
 spring.jpa.hibernate.ddl-auto=update
@@ -26,7 +26,7 @@ spring.devtools.livereload.enabled=true
 # ?? ?? ??
 spring.mail.host=smtp.gmail.com
 spring.mail.username=ksjj1402@gmail.com
-spring.mail.password=dkfzkxmfkwm14A%
+spring.mail.password=kijdhvxvluowdhhj
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
