--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=RiGun
 spring.datasource.password=1318
 
+
 # update 또는 create
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
@@ -16,6 +17,7 @@ spring.jpa.database=oracle
 spring.jackson.serialization.fail-on-empty-beans=false
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 
+# spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
