2022/05/09 상품구매 수정,삭제 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ logging.level.org.hibernate=info
 # 무단 배포 및 악용금지
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.username=RiGun
+spring.datasource.password=1318
 
 # update 또는 create
 spring.jpa.hibernate.ddl-auto=update
