--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.hibernate=info
 # 무단 배포 및 악용금지
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=RiGun
+spring.datasource.username=Rigun
 spring.datasource.password=1318
 
 
