--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.password=1318
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true 
+# 이거쓰면 db에 쿼리 날릴때 쉽게 볼 수 있음
+spring.jpa.properties.hibernate.format_sql=true 
 spring.jpa.database=oracle
 spring.jackson.serialization.fail-on-empty-beans=false
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
