--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=Rigun
 spring.datasource.password=1318
 
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 # update 또는 create
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=oracle
 spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
